# rytm-rs

./: Cargo.toml  README.md  a  b  c
rytm/: Cargo.toml
rytm-macro/: Cargo.toml  README.md
rytm-macro/src/: lib.rs  machine_parameters.rs  parameter_range.rs  util.rs
rytm-macro/tests/: parameter_range.rs
rytm/src/: defaults.rs  error.rs  global.rs  kit.rs  lib.rs  object.rs  pattern.rs  prelude.rs  query.rs  settings.rs  sound.rs  sysex.rs  util.rs
rytm/src/global/: types.rs
rytm/src/global/menu/: metronome_settings.rs  midi_config.rs  routing.rs  sequencer_config.rs
rytm/src/kit/: comp.rs  delay.rs  dist.rs  lfo.rs  reverb.rs  types.rs
rytm/src/object/: global.rs  kit.rs  pattern.rs  settings.rs  sound.rs  types.rs
rytm/src/object/global/: menu.rs  types.rs  unknown.rs
rytm/src/object/global/menu/: metronome_settings.rs  midi_config.rs  routing.rs  sequencer_config.rs
rytm/src/object/kit/: comp.rs  delay.rs  dist.rs  lfo.rs  retrig.rs  reverb.rs  types.rs  unknown.rs
rytm/src/object/pattern/: de.rs  fx_track.rs  parameter_lock.rs  plock.rs  plock_seq.rs  synth_parameter.rs  track.rs  types.rs
rytm/src/object/pattern/track/: trig.rs  types.rs
rytm/src/object/settings/: types.rs  unknown.rs
rytm/src/object/sound/: de.rs  machine.rs  page.rs  settings.rs  types.rs  unknown.rs
rytm/src/object/sound/machine/: bd_acoustic.rs  bd_classic.rs  bd_fm.rs  bd_hard.rs  bd_plastic.rs  bd_sharp.rs  bd_silky.rs  bt_classic.rs  cb_classic.rs  cb_metallic.rs  ch_classic.rs  ch_metallic.rs  cp_classic.rs  cy_classic.rs  cy_metallic.rs  cy_ride.rs  hh_basic.rs  hh_lab.rs  oh_classic.rs  oh_metallic.rs  rs_classic.rs  rs_hard.rs  sd_acoustic.rs  sd_classic.rs  sd_fm.rs  sd_hard.rs  sd_natural.rs  sy_chip.rs  sy_dual_vco.rs  sy_raw.rs  ut_impulse.rs  ut_noise.rs  xt_classic.rs
rytm/src/object/sound/page/: amp.rs  filter.rs  lfo.rs  samp.rs
rytm/src/pattern/: plock_seq.rs  track.rs  types.rs
rytm/src/pattern/track/: trig.rs  types.rs
rytm/src/query/: global.rs  kit.rs  pattern.rs  raw.rs  settings.rs  song.rs  sound.rs
rytm/src/settings/: types.rs  unknown.rs
rytm/src/sound/: machine.rs  settings.rs  types.rs  unknown.rs
rytm/src/sound/page/: amp.rs  filter.rs  lfo.rs  samp.rs
rytm/src/sysex/: types.rs
rytm/tests/: reverse_engineering.rs
rytm/tests/common/: mod.rs  port.rs  util.rs
(+16 files in other folders)
