[package]
name = "rytm-rs-macro"
version = "0.1.0"
authors = ["alisomay <alisomay@runbox.com>"]
edition = "2021"
license = "MIT"
description = "A procedural macro for generating rytm-rs code"
readme = "README.md"
homepage = "https://github.com/alisomay/rytm-rs"
repository = "https://github.com/alisomay/rytm-rs"
documentation = "https://docs.rs/rytm-rs-macro/latest/rytm_rs_macro/#"
keywords = ["procmacro", "rytm", "rytm-rs"]
categories = ["development-tools"]

[lib]
name = "rytm_rs_macro"
path = "src/lib.rs"
proc-macro = true

[dependencies]
syn = { version = "2.0.41", features = ["full"] }
quote = "1.0.33"
proc-macro2 = "1.0.70"






